  * Changes: Added stopping all daemons which are using invoker before functional tests
  * Implemented: SWP#DUI-5199, SWP#DUI-5180, SWP#DUI-5162
  * Fixes: NB#244103 - Device hangs on closing application in connecting view while configuring MFE account
  * Fixes: NB#243857 - Mismatched new[] - delete in applauncherd
  * Fixes: NB#238937 - minor splash-screen bugs

 -- Olli Leppanen <olli.leppanen@nokia.com>  Fri, 08 Apr 2011 15:08:24 +0300

applauncherd (0.26.0) stable; urgency=low

  * Fixes: NB#240051 - applauncherd-launcher: please remove requests of DRM related token
  * Fixes: NB#242533 - applauncherd.bin is terminated by SIGPIPE
  * Changes: Added QML booster user documentation into doc package

 -- Jussi Lind <jussi.lind@nokia.com>  Thu, 07 Apr 2011 16:24:15 +0300

applauncherd (0.25.1) stable; urgency=low

  * Fixes: NB#241927 - QML boosted applications have incorrect MApplication::objectName
  * Lock file moved to /var/run
  * Changes: Use #include <MDeclarativeCache> in boosted-qml examples
  * Changes: Added -I/usr/include/applauncherd to qdeclarative-boostable.pc

 -- Jussi Lind <jussi.lind@nokia.com>  Thu, 31 Mar 2011 17:13:21 +0300

applauncherd (0.25.0) stable; urgency=low

  * Fixes: NB#241755 - Booster-e doesn't work with executables
  * Fixes: NB#239608 - invoker doesn't forward ^C always
  * Changes: Directory naming in the source tree made consistent => all lower case.
  * Changes: Partially fixes bug 231306 - Launcher slows down boot by loading irrelevant libraries
  * Changes: New main page for the documentation
  * Changes: moved e-booster tests to functests and marked them as significant
  * Changes: moved single instance tests to functests and made them significant
  * Changes: moved qml booster tests to functests and made them significant
  * Changes: Remove comments from performance tests.xml files

 -- Jussi Lind <jussi.lind@nokia.com>  Wed, 30 Mar 2011 15:58:08 +0300

applauncherd (0.24.5) stable; urgency=low
